@@ -32,6 +32,10 @@ dependencies {
     // Web / REST
     implementation("org.springframework.boot:spring-boot-starter-webmvc")
 
+    // Cache
+    implementation("org.springframework.boot:spring-boot-starter-cache")
+    implementation("org.springframework.boot:spring-boot-starter-data-redis")
+
     // JPA
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
 
@@ -70,6 +74,10 @@ dependencies {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs(
+        "-Djdk.attach.allowAttachSelf=true",
+        "-XX:+EnableDynamicAgentLoading"
+    )
 }
 
 
